vlib/v/checker/tests/wrong_propagate_ret_type.vv
fn ret_none() ?int {
	return none
}

fn opt_call() int {
	a := ret_none()?
	return a
}
